--- a/auth-server.yml
+++ b/auth-server.yml
@@ -17,9 +17,9 @@ security:
 # and token store
 spring:
   datasource:
-    url: jdbc:mysql://172.22.217.19:3306/auth
-    username: tharanga
-    password: password
+    url: jdbc:mysql://localhost:3306/auth
+    username: root
+    password: admin
     driver-class: com.mysql.jdbc.Driver
   
   jpa:
@@ -39,4 +39,4 @@ eureka:
     preferIpAddress: true
   client:
     serviceUrl:
-      defaultZone: http://192.168.59.103:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
