--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -3,10 +3,10 @@ server:
   port: 8765
 
 # The OAuth2 server definition that would be used to send the authorization requests to
-authserver:
-    hostname: localhost
-    port: 8899
-    contextPath: userauth
+#authserver:
+#    hostname: localhost
+#    port: 8899
+#    contextPath: userauth
     
 # Define the routes which determine what URL are serviced by what applications.
 # The application/services are defined in the bootstrap.yml file of individual applications
@@ -20,10 +20,10 @@ zuul:
     user-webservice: /api/user/**
     task-webservice: /api/task/**
     web-portal: /**
-    user: 
-      path: /api/loggedinuser/**
-      stripPrefix: true
-      url: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}
+ #  user: 
+ #     path: /api/loggedinuser/**
+ #     stripPrefix: true
+ #     url: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}
 # Define the Eureka server that handles service registration
 eureka:
   client:
@@ -38,25 +38,25 @@ eureka:
 
 # Remaining properties are used by the OAuth2 SSO to determine where the authorization server is and
 # what client crendentials to use to access that server.
-spring:
-  oauth2:
-    sso:
-      home:
-        secure: false
-        path: /,/**/*.html
-    client:
-      accessTokenUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/token
-      userAuthorizationUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/authorize
-      clientId: client
-      clientSecret: secret
+#spring:
+#  oauth2:
+#    sso:
+#      home:
+#        secure: false
+#        path: /,/**/*.html
+#    client:
+#      accessTokenUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/token
+#      userAuthorizationUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/oauth/authorize
+#      clientId: client
+#      clientSecret: secret
 # The userInfoUri is used to authenticate the user so that SSO token can be relayed forward. It needs to either be
 # a physical endpoint (defined using userInfoUri) OR can be bypassed if you use a JSON web token (JWT) that stores
 # information about grants and authentication in the token itself.
 
 # Note that the "/user" endpoint needs to provide the principle of the logged in user (/me endpoint)
-    resource: 
-      userInfoUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/me
-      preferTokenInfo: false 
+#    resource: 
+#      userInfoUri: http://${authserver.hostname}:${authserver.port}/${authserver.contextPath}/me
+#      preferTokenInfo: false 
     
 # Datasource and JPA configuration to be used for using the same tokenstore as the authorization server for
 # the defined resource server. Note that there can't be 2 different root nodes, so datasource falls under the "spring" node.
@@ -86,10 +86,10 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
       
 # The OAuth2 server definition that would be used to send the authorization requests to
-authserver:
-    hostname: localhost
-    port: 8899
-    contextPath: userauth
+#authserver:
+#    hostname: localhost
+#    port: 8899
+#    contextPath: userauth
     
 # Define the port where the API gateway server would be running. This could always be port 8080
 # since each docker container has it's own IP
